--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "@project/credit-card-offers-api",
+  "name": "furry-happiness",
   "version": "0.0.0",
   "description": "A sample backend project with amplify, that copiles to a library module",
-  "main": "index.js",
+  "main": "dist/furry-happiness.js",
+  "module": "dist/furry-happiness.esm.js",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "@aws-amplify/api": "^3.1.21",
     "@aws-amplify/core": "^3.4.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "rimraf": "^3.0.2",
+    "rollup": "^2.26.9"
+  },
+  "resolutions": {
+    "buffer": "^4.9.2"
+  },
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "rollup -c"
+  },
+  "repository": "https://github.com/soumik-mukherjee/furry-happiness"
 }
