--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "furry-happiness",
-  "version": "0.0.0",
+  "name": "@soumik-mukherjee/furry-happiness",
+  "version": "0.0.2",
   "description": "A sample backend project with amplify, that copiles to a library module",
   "main": "dist/furry-happiness.js",
   "module": "dist/furry-happiness.esm.js",
@@ -21,5 +21,9 @@
     "clean": "rimraf dist",
     "build": "rollup -c"
   },
+  "files": [
+    "dist/furry-happiness.js",
+    "dist/furry-happiness.esm.js"
+  ],
   "repository": "https://github.com/soumik-mukherjee/furry-happiness"
 }
