--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "dist/furry-happiness.js",
     "dist/furry-happiness.esm.js"
   ],
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+  },
   "repository": "https://github.com/soumik-mukherjee/furry-happiness"
 }
