--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@aws-amplify/api": "^3.1.21",
-    "@aws-amplify/core": "^3.4.4"
+
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
     "rollup": "^2.26.9"
+  },
+  "peerDependencies": {
+    "@aws-amplify/api": "^3.1.21",
+    "@aws-amplify/core": "^3.4.4"
   },
   "resolutions": {
     "buffer": "^4.9.2"
